--- a/info/index.html
+++ b/info/index.html
@@ -63,10 +63,10 @@
     <div class="sec-head"><h2>About</h2><div class="sec-line"></div></div>
     <div class="about-grid">
       <div class="about-text">
-        <p>I grew up with limited resources and chose engineering over physics out of economic necessity. That constraint shaped how I think: favor first principles, build from what is available, and never confuse movement with progress.</p>
-        <p>I am an electrical and electronics engineer with a specialization in power and control systems from Kathmandu University. I have built wireless sensor networks for wildlife conservation, shimmed superconducting magnets for MRI systems at General Electric, designed flight controllers for electric aircraft, and written compilers that turn natural language into verified code.</p>
-        <p>The thread connecting these is a persistent interest in <em>systems under constraint</em>&mdash;energy-limited, size-limited, SNR-limited&mdash;and in building tools that remove friction between thinking and making.</p>
-        <p>My current research direction centers on nanosystems and nanodevices: multi-modal energy harvesting, far-field wireless power transfer, and monolithic integration at the nanoscale. The goal is devices as easy to deploy as sowing seeds&mdash;technology that blends with the natural environment rather than overwriting it.</p>
+        <p>I am an output machine, a man of action.</p>
+        <p>Also an electrical and electronics engineer with a specialization in power and control systems from Kathmandu University. I've built wireless sensor networks for wildlife conservation, shimmed superconducting magnets for MRI systems at General Electric, designed flight controllers for eVTOL aircrafts, and written compilers that turn natural language into verified code.</p>
+        <p>The thread connecting these is a persistent interest in <em>systems under constraint</em>&mdash;energy-limited, size-limited, SNR-limited&mdash;and in building tools that remove friction between thinking and building.</p>
+        <p>My current life direction is heavy complex experimentation. My research direction centers on nanosystems and nanodevices: multi-modal energy harvesting, far-field wireless power transfer, and monolithic integration at the nanoscale. The goal is devices as easy to deploy as sowing seeds&mdash;technology that blends with the natural environment rather than overwriting it.</p>
       </div>
       <div class="about-stats">
         <div class="stat-card"><div class="num">3</div><div class="lbl">Publications</div></div>
