--- a/info/index.html
+++ b/info/index.html
@@ -66,7 +66,7 @@
         <p>I am an output machine, a man of action.</p>
         <p>Also an electrical and electronics engineer with a specialization in power and control systems from Kathmandu University. I've built wireless sensor networks for wildlife conservation, shimmed superconducting magnets for MRI systems at General Electric, designed flight controllers for eVTOL aircrafts, and written compilers that turn natural language into verified code.</p>
         <p>The thread connecting these is a persistent interest in <em>systems under constraint</em>&mdash;energy-limited, size-limited, SNR-limited&mdash;and in building tools that remove friction between thinking and building.</p>
-        <p>My current life direction is heavy complex experimentation. My research direction centers on nanosystems and nanodevices: multi-modal energy harvesting, far-field wireless power transfer, and monolithic integration at the nanoscale. The goal is devices as easy to deploy as sowing seeds&mdash;technology that blends with the natural environment rather than overwriting it.</p>
+        <p>My current life direction is heavy complex experimentation. My research direction centers on nanosystems and nanodevices: multi-modal energy harvesting, far-field wireless power transfer, and monolithic integration at the nanoscale. The goal is creating biomimetic devices like the microbots you saw in <a href="https://static.wikia.nocookie.net/disney/images/4/4e/Microbot.png/revision/latest?cb=20150821161449">Big Hero 6</a> with an even smaller footprint.</p>
       </div>
       <div class="about-stats">
         <div class="stat-card"><div class="num">3</div><div class="lbl">Publications</div></div>
