--- a/info/index.html
+++ b/info/index.html
@@ -63,7 +63,7 @@
     <div class="sec-head"><h2>About</h2><div class="sec-line"></div></div>
     <div class="about-grid">
       <div class="about-text">
-        <p>If life is a laten space, movement is the only reward.</p>
+        <p>If life is a latent space, movement is the only reward.</p>
         <p>Also an electrical and electronics engineer with specializations in power and control systems from Kathmandu University. I've built wireless sensor networks for wildlife conservation, shimmed superconducting magnets for MRI systems at General Electric, designed flight controllers for eVTOL aircrafts, and written compilers that turn natural language into verified code.</p>
         <p>The thread connecting these is a persistent interest in <em>systems under constraint</em>&mdash;energy-limited, size-limited, SNR-limited&mdash;and in building tools that remove friction between thinking and building.</p>
         <p>My current life is desingned around maximizing theoretical and applied experimentation. My research direction centers on nanosystems and nanodevices: multi-modal energy harvesting, far-field wireless power transfer, and monolithic integration at the nanoscale. The goal is creating biomimetic devices like the microbots you saw in <a href="https://static.wikia.nocookie.net/disney/images/4/4e/Microbot.png/revision/latest?cb=20150821161449">Big Hero 6 </a>with an even smaller footprint.</p>
