--- a/info/index.html
+++ b/info/index.html
@@ -52,7 +52,7 @@
     <a href="assets/papers/PolarCV.pdf" target="_blank">&#9655; Download CV</a>
     <a href="https://github.com/antiresonant" target="_blank">&#9671; GitHub</a>
     <a href="https://www.linkedin.com/in/polarj-s-86239b158/" target="_blank">&#9670; LinkedIn</a>
-    <a href="mailto:polarjsapkota@gmail.com">&#9993; Email</a>
+    <a href="mailto:hi@polarjsapkota.com">&#9993; Email</a>
     <a href="#documents">&#9783; Papers &amp; Reports</a>
   </div>
 </header>
@@ -858,7 +858,7 @@
   <div class="wrap">
     <div class="sec-head"><h2>Contact</h2><div class="sec-line"></div></div>
     <div class="contact-row">
-      <div class="c-item"><strong>Email</strong><a href="mailto:polarjsapkota@gmail.com">polarjsapkota@gmail.com</a></div>
+      <div class="c-item"><strong>Email</strong><a href="mailto:hi@polarjsapkota.com">hi@polarjsapkota.com</a></div>
       <div class="c-item"><strong>GitHub</strong><a href="https://github.com/antiresonant" target="_blank">github.com/antiresonant</a></div>
       <div class="c-item"><strong>LinkedIn</strong><a href="https://www.linkedin.com/in/polarj-s-86239b158/" target="_blank">linkedin.com/in/polarj-s</a></div>
       <div class="c-item"><strong>Location</strong>Kathmandu, Nepal</div>
