--- a/info/index.html
+++ b/info/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Polarj Sapkota &mdash; Engineer, Researcher, Builder</title>
+  <title>Polarj Sapkota &mdash; Engineer</title>
   <meta name="description" content="Electrical engineer and researcher. Power systems, control systems, nanotechnology, and AI-driven software infrastructure.">
   <meta property="og:title" content="Polarj Sapkota &mdash; Electrical Engineer, Researcher, Builder">
   <meta property="og:description" content="Electrical engineer specializing in power systems, control systems, embedded hardware, and AI-driven software infrastructure. GE Healthcare, IEEE PowerCon, 50+ projects.">
@@ -46,7 +46,7 @@
 <header class="hero">
   <img class="hero-photo" src="assets/profile/Tremendous.png" alt="Polarj Sapkota">
   <h1>Polarj Sapkota</h1>
-  <p class="sub">Electrical Engineer &middot; Researcher &middot; Builder</p>
+  <p class="sub">Electrical Engineer &middot; Theorist</p>
   <p class="loc">Kathmandu, Nepal</p>
   <div class="hero-links">
     <a href="assets/papers/PolarCV.pdf" target="_blank">&#9655; Download CV</a>
