--- a/info/index.html
+++ b/info/index.html
@@ -47,7 +47,7 @@
   <img class="hero-photo" src="assets/profile/Tremendous.png" alt="Polarj Sapkota">
   <h1>Polarj Sapkota</h1>
   <p class="sub">Electrical Engineer &middot; Theorist</p>
-  <p class="loc">Pangaea</p>
+  <!-- <p class="loc">Pangaea</p> -->
   <div class="hero-links">
     <a href="assets/papers/PolarCV.pdf" target="_blank">&#9655; Download CV</a>
     <a href="https://github.com/antiresonant" target="_blank">&#9671; GitHub</a>
@@ -857,7 +857,7 @@
       <div class="c-item"><strong>Email</strong><a href="mailto:hi@polarjsapkota.com">hi@polarjsapkota.com</a></div>
       <div class="c-item"><strong>GitHub</strong><a href="https://github.com/antiresonant" target="_blank">github.com/antiresonant</a></div>
       <div class="c-item"><strong>LinkedIn</strong><a href="https://www.linkedin.com/in/polarj-s-86239b158/" target="_blank">linkedin.com/in/polarj-s</a></div>
-      <div class="c-item"><strong>Location</strong>Pangaea</div>
+      <div class="c-item"><strong>Location</strong><a href="https://en.wikipedia.org/wiki/Pangaea">Pangaea</a></div>
       <div class="c-item"><strong>CV</strong><a href="assets/papers/PolarCV.pdf" target="_blank">Download PDF</a></div>
     </div>
   </div>
