--- a/info/index.html
+++ b/info/index.html
@@ -864,7 +864,7 @@
   </div>
 </section>
 
-<footer>&copy; 2026 Polarj Sapkota &nbsp;&middot;&nbsp; <a href="../">Portfolio &rarr;</a></footer>
+<footer>&copy; 2026 Polarj Sapkota &nbsp;&middot;&nbsp; <a href="https://antiresonant.github.io/">Portfolio &rarr;</a></footer>
 
 <!-- LIGHTBOX -->
 <div class="lightbox" id="lightbox" onclick="closeLightbox(event)">
